[package]
name = "subscription"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "subscription"

[dependencies]
axum = "0.6.10"
config = { version = "0.13.3", features = ["toml"] }
hyper = "0.14.24"
serde = "1.0.154"
sqlx = { version = "0.6", features = [ "uuid", "chrono", "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = "0.1.37"
tracing-subscriber ={ version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = [ "trace" ] }
tower = "0.4.13"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
